Code quality: Replaced presentational tag <b> with <strong>

--- a/src/org/cacheonix/impl/util/logging/chainsaw/package.html
+++ b/src/org/cacheonix/impl/util/logging/chainsaw/package.html
@@ -87,8 +87,8 @@
 <TABLE cellSpacing=0 cellPadding=2 border=1>
 
     <TR>
-        <TD vAlign=top><B>Property</B></TD>
-        <TD vAlign=top><B>Description</B></TD>
+        <TD vAlign=top><strong>Property</strong></TD>
+        <TD vAlign=top><strong>Description</strong></TD>
     </TR>
     <TR>
         <TD vAlign=top>chainsaw.port</TD>
