Code quality: fixed typos

--- a/src/org/cacheonix/impl/util/logging/chainsaw/package.html
+++ b/src/org/cacheonix/impl/util/logging/chainsaw/package.html
@@ -47,7 +47,7 @@
 <P>Chainsaw also supports loading a events logged to a file using
     the <A href="../xml/XMLLayout.html">XMLLayout</A> format. This
     is great for analysing log files, and means you do not need to
-    keep Chainsaw running continously. It is easy to add support
+    keep Chainsaw running continuously. It is easy to add support
     for loading events from other sources like JDBC.</P>
 
 <P>A picture is worth a thousand words: </P>
