--- a/src/org/cacheonix/impl/util/logging/or/package.html
+++ b/src/org/cacheonix/impl/util/logging/or/package.html
@@ -23,7 +23,7 @@
 
 <body>
 
-<p>ObjectRenders are resposible for rendering messages depending on
+<p>ObjectRenders are responsible for rendering messages depending on
    their class type.
 
 <hr>
