Code quality: fixed typos

--- a/src/org/cacheonix/impl/net/multicast/package.html
+++ b/src/org/cacheonix/impl/net/multicast/package.html
@@ -2,6 +2,6 @@
 <head>
 </head>
 <body>
-Contains Cachenix protocol for reliable ordered multicast.
+Contains Cacheonix protocol for reliable ordered multicast.
 </body>
 </html>
